--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,9 @@
-OPENAI_API_KEY="your_openai_api_key_here"
+PORT=4000
+MONGODB_URL=your_mongodb_connection_string
+JWT_SECRET=your_jwt_secret
+EMAIL_USER=your_email_user
+EMAIL_PASS=your_email_pass
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+OPENAI_API_KEY=your_openai_api_keyOPENAI_API_KEY="your_openai_api_key_here"
