--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.16.3",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "openai": "^5.9.0",
     "otp-generator": "^4.0.1"
   }
 }
